@@ -3717,6 +3717,65 @@ parameter_list|)
 block|{
 comment|// expected if LCE isn't setup right, but not necessary for this test
 block|}
+name|Container
+name|container
+init|=
+name|mock
+argument_list|(
+name|Container
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|ContainerLaunchContext
+name|context
+init|=
+name|mock
+argument_list|(
+name|ContainerLaunchContext
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|env
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|when
+argument_list|(
+name|container
+operator|.
+name|getLaunchContext
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|context
+operator|.
+name|getEnvironment
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|env
+argument_list|)
+expr_stmt|;
 name|lce
 operator|.
 name|reacquireContainer
@@ -3726,6 +3785,11 @@ name|ContainerReacquisitionContext
 operator|.
 name|Builder
 argument_list|()
+operator|.
+name|setContainer
+argument_list|(
+name|container
+argument_list|)
 operator|.
 name|setUser
 argument_list|(
